# apex-engine

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
apex-core/: Cargo.toml
apex-core/benches/: allocation_bench.rs  common.rs  matching_bench.rs
apex-core/src/: README.md  engine.rs  lib.rs
apex-core/src/engine/: book.rs  engine.rs  error.rs  matching.rs  syncer.rs  types.rs
apex-core/tests/: common.rs  directives.rs  lifecycle.rs  limit_orders.rs  market_orders.rs  modify.rs  stress.rs
