[package]
name = "apex-core"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "matching_bench"
harness = false

[dependencies]
mimalloc = { version = "0.1.46" }
crossbeam = "0.8"
crossbeam-skiplist = "0.1.3"
flurry = "0.5.2"
num-bigint = "0.4.6"
crypto-bigint = { version = "0.6.1", features = [] }

[dev-dependencies]
gnuplot = "0.0.46"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.1"